--- a/reviewer-quiz.html
+++ b/reviewer-quiz.html
@@ -131,9 +131,9 @@
       const setModeNote = (questionType) => {
         const normalizedType = (questionType || '').toLowerCase();
         const copy = normalizedType === 'identification'
-          ? 'Type your answer and tap Submit to continue. Your answers will be checked at the end.'
+          ? 'Type your answer and click Submit to move to the next question. Your answers will be checked at the end.'
           : normalizedType === 'multiple-choice'
-            ? 'Select the best option, then continue to the next question. Your answers will be checked at the end.'
+            ? 'Select the best option, then click Next to continue. Your answers will be checked at the end.'
             : '';
         if (copy) {
           modeNote.textContent = copy;
@@ -150,7 +150,10 @@
         answerInput.disabled = true;
         submitBtn.disabled = true;
         state.userAnswers[state.index] = userValue;
-        nextQuestionBtn.disabled = false;
+        
+        // Move to next question automatically for identification
+        state.index += 1;
+        renderQuestion();
       };
 
       const renderIdentificationQuestion = (questionData) => {
@@ -158,14 +161,19 @@
         if (!acceptedAnswers.length) {
           choicesList.innerHTML = '<p class="quiz-summary">This identification question is missing an answer key. Please regenerate your reviewer.</p>';
           nextQuestionBtn.disabled = false;
+          nextQuestionBtn.hidden = false;
           return;
         }
+
+        // Determine button text based on position in quiz
+        const isLastQuestion = state.index === state.order.length - 1;
+        const buttonText = isLastQuestion ? 'Submit & Finish' : 'Submit & Next';
 
         choicesList.innerHTML = `
           <div class="quiz-answer-input">
             <label class="sr-only" for="identificationInput">Type your answer</label>
             <input type="text" id="identificationInput" placeholder="Type your answer" autocomplete="off" />
-            <button type="button" id="submitAnswerBtn" disabled>Submit answer</button>
+            <button type="button" id="submitAnswerBtn" disabled>${buttonText}</button>
           </div>
         `;
 
@@ -239,8 +247,12 @@
         setModeNote(questionType);
 
         if (questionType === 'identification') {
+          // Hide next button for identification questions
+          nextQuestionBtn.hidden = true;
           renderIdentificationQuestion(questionData);
         } else {
+          // Show next button for multiple choice questions
+          nextQuestionBtn.hidden = false;
           const choiceObjects = (questionData.choices || []).map((choice, idx) => ({
             text: choice,
             correct: idx === Number(questionData.answerIndex),
@@ -260,9 +272,9 @@
           choicesList.querySelectorAll('.choice-btn').forEach((button) => {
             button.addEventListener('click', () => handleChoice(button));
           });
+          
+          nextQuestionBtn.textContent = state.index === state.order.length - 1 ? 'Finish quiz' : 'Next question';
         }
-
-        nextQuestionBtn.textContent = state.index === state.order.length - 1 ? 'Finish quiz' : 'Next question';
       };
 
       const handleChoice = (button) => {
