--- a/reviewer-quiz.html
+++ b/reviewer-quiz.html
@@ -31,9 +31,7 @@
         <div class="quiz-question" id="questionText">Loading…</div>
         <p class="quiz-mode-note" id="modeNote" hidden>Loading quiz mode…</p>
         <div class="quiz-choices" id="choicesList" role="group" aria-live="polite"></div>
-        <div class="quiz-buttons">
-          <button id="nextQuestionBtn" type="button" disabled>Next question</button>
-        </div>
+        <div class="quiz-buttons" id="questionButtons"></div>
       </div>
     </section>
 
