--- a/reviewer.html
+++ b/reviewer.html
@@ -11,7 +11,19 @@
   <a href="apps.html" class="apps-button back-button">Apps</a>
 
   <div class="container reviewer-container">
-    <h1>Reviewer</h1>
+    <div class="reviewer-layout">
+      <aside class="ads-column ads-column-left" aria-label="Desktop AdSense slot">
+        <div class="adsense-card">
+          <p class="adsense-card__label">AdSense slot</p>
+          <p class="adsense-card__note">Desktop sidebar ad</p>
+          <div class="adsense-placeholder">
+            <span>Replace with your responsive AdSense ins block after approval.</span>
+          </div>
+        </div>
+      </aside>
+
+      <div class="reviewer-main">
+        <h1>Reviewer</h1>
     <p class="apps-intro reviewer-intro">
       Create AI-powered study materials from text, PDFs, or videos. Get concise reviewer cards plus a randomized quiz.
     </p>
@@ -130,6 +142,16 @@
       </div>
     </section>
 
+    <div class="ads-mobile-slot" aria-label="Mobile AdSense slot">
+      <div class="adsense-card">
+        <p class="adsense-card__label">AdSense slot</p>
+        <p class="adsense-card__note">Visible only on mobile</p>
+        <div class="adsense-placeholder">
+          <span>Move your AdSense responsive ins block here for mobile devices.</span>
+        </div>
+      </div>
+    </div>
+
     <div class="advisor-status reviewer-status" id="statusBox" role="status" aria-live="polite">
       <strong><i class="fas fa-info-circle"></i>&nbsp;Waiting for a topic</strong>
       <p>Describe the subject you want to review and choose how many entries to generate.</p>
@@ -169,6 +191,31 @@
       </div>
     </section>
 
+      </div>
+
+      <aside class="ads-column ads-column-right" aria-label="Desktop AdSense slot">
+        <div class="adsense-card">
+          <p class="adsense-card__label">AdSense slot</p>
+          <p class="adsense-card__note">Desktop sidebar ad</p>
+          <div class="adsense-placeholder">
+            <span>Swap this placeholder with another responsive ins block.</span>
+          </div>
+        </div>
+      </aside>
+    </div>
+
+    <section class="adsense-instructions" aria-label="AdSense setup instructions">
+      <h2>How to make AdSense work</h2>
+      <ol>
+        <li>Add the async AdSense script inside the <code>&lt;head&gt;</code> and replace <code>ca-pub-XXXXXXXX</code> with your publisher ID:<br />
+          <code>&lt;script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXX" crossorigin="anonymous"&gt;&lt;/script&gt;</code>
+        </li>
+        <li>For each placeholder above, insert the responsive ad block (same publisher ID, unique <code>data-ad-slot</code>) and call <code>(adsbygoogle = window.adsbygoogle || []).push({});</code>.</li>
+        <li>Submit rezorio.github.io for site verification in your AdSense account and wait for approval before ads start serving.</li>
+        <li>Keep the mobile block below the generation section so phone users see ads after interacting with the form.</li>
+      </ol>
+      <p class="adsense-instructions__note">Use the responsive format so Google can automatically size ads for each slot.</p>
+    </section>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
