--- a/reviewer.html
+++ b/reviewer.html
@@ -25,7 +25,7 @@
       <div class="reviewer-main">
         <h1>Reviewer</h1>
     <p class="apps-intro reviewer-intro">
-      Create AI-powered study materials from text, PDFs, or videos. Get concise reviewer cards plus a randomized quiz.
+      Create AI-powered study materials from text, PDFs, or videos. Get concise reviewer cards plus a randomized quizzes.
     </p>
 
     <section class="reviewer-form" id="reviewerForm" role="form" aria-label="Generate AI reviewer">
