comment out adsense

--- a/reviewer.html
+++ b/reviewer.html
@@ -12,7 +12,7 @@
 
   <div class="container reviewer-container">
     <div class="reviewer-layout">
-      <aside class="ads-column ads-column-left" aria-label="Desktop AdSense slot">
+      <!-- <aside class="ads-column ads-column-left" aria-label="Desktop AdSense slot">
         <div class="adsense-card">
           <p class="adsense-card__label">AdSense slot</p>
           <p class="adsense-card__note">Desktop sidebar ad</p>
@@ -20,7 +20,7 @@
             <span>Replace with your responsive AdSense ins block after approval.</span>
           </div>
         </div>
-      </aside>
+      </aside> -->
 
       <div class="reviewer-main">
         <h1>Reviewer</h1>
@@ -142,7 +142,7 @@
       </div>
     </section>
 
-    <div class="ads-mobile-slot" aria-label="Mobile AdSense slot">
+    <!-- <div class="ads-mobile-slot" aria-label="Mobile AdSense slot">
       <div class="adsense-card">
         <p class="adsense-card__label">AdSense slot</p>
         <p class="adsense-card__note">Visible only on mobile</p>
@@ -150,7 +150,7 @@
           <span>Move your AdSense responsive ins block here for mobile devices.</span>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="advisor-status reviewer-status" id="statusBox" role="status" aria-live="polite">
       <strong><i class="fas fa-info-circle"></i>&nbsp;Waiting for a topic</strong>
@@ -193,7 +193,7 @@
 
       </div>
 
-      <aside class="ads-column ads-column-right" aria-label="Desktop AdSense slot">
+      <!-- <aside class="ads-column ads-column-right" aria-label="Desktop AdSense slot">
         <div class="adsense-card">
           <p class="adsense-card__label">AdSense slot</p>
           <p class="adsense-card__note">Desktop sidebar ad</p>
@@ -201,10 +201,10 @@
             <span>Swap this placeholder with another responsive ins block.</span>
           </div>
         </div>
-      </aside>
+      </aside> -->
     </div>
 
-    <section class="adsense-instructions" aria-label="AdSense setup instructions">
+    <!-- <section class="adsense-instructions" aria-label="AdSense setup instructions">
       <h2>How to make AdSense work</h2>
       <ol>
         <li>Add the async AdSense script inside the <code>&lt;head&gt;</code> and replace <code>ca-pub-XXXXXXXX</code> with your publisher ID:<br />
@@ -215,7 +215,7 @@
         <li>Keep the mobile block below the generation section so phone users see ads after interacting with the form.</li>
       </ol>
       <p class="adsense-instructions__note">Use the responsive format so Google can automatically size ads for each slot.</p>
-    </section>
+    </section> -->
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
