--- a/apps.html
+++ b/apps.html
@@ -60,6 +60,11 @@
                 <h2>Salitang Hulaan</h2>
                 <p>Tagalog Wordle - Hulaan ang 5-letrang salita sa anim na pagsubok!</p>
             </a>
+            <a href="time-cost-checker.html" class="app-card">
+                <i class="fas fa-clock"></i>
+                <h2>Time Cost Checker</h2>
+                <p>Calculate how many work hours you need to afford any item.</p>
+            </a>
         </div>
     </div>
 </body>
