--- a/index.html
+++ b/index.html
@@ -156,6 +156,19 @@
                     </div>
                 </div>
             </a>
+
+            <a href="house-cost-estimator.html" class="app-card" data-category="tools">
+                <div class="app-icon">
+                    <i class="fas fa-home"></i>
+                </div>
+                <div class="app-content">
+                    <h2>House Cost Estimator</h2>
+                    <p>Estimate construction costs by sqm, quality tier, and house type with blueprint preview.</p>
+                    <div class="app-tags">
+                        <span class="tag">Tools</span>
+                    </div>
+                </div>
+            </a>
         </div>
 
         <!-- Footer Info -->
